# pallet

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
migrations/2019-08-24-162714_create_owner/: down.sql  up.sql
migrations/2019-08-24-184239_create_token/: down.sql  up.sql
migrations/2019-08-24-202132_create_krate/: down.sql  up.sql
migrations/2019-08-24-215120_create_version/: down.sql  up.sql
migrations/2019-08-25-132126_create_krateowner/: down.sql  up.sql
src/: commands.rs  config.rs  error.rs  git_auth.rs  lib.rs  main.rs  metadata.rs  repository.rs  schema.rs  storage.rs  utils.rs
src/api/: middleware.rs  mod.rs  server.rs
src/api/handlers/: download.rs  me.rs  mod.rs  owners.rs  publish.rs  search.rs  token.rs  yank.rs
src/models/: krate.rs  krateowner.rs  mod.rs  owner.rs  token.rs  version.rs
src/storage/: local.rs  mod.rs  s3.rs
src/types/: krate.rs  mod.rs
