[package]
name = "pallet"
version = "0.1.0"
description = "A private registry and API for Rust"
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
git2 = "0.10"
log = "0.4"
pretty_env_logger = "0.3"
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "0.9", features = ["serde"] }
sha2 = "0.8"
structopt = "0.2"
tempfile = "3"
uuid = { version = "0.7", features = ["v4"] }
warp = "0.1"
